--- a/pages/rehberler/50-yas-egzersiz.html
+++ b/pages/rehberler/50-yas-egzersiz.html
@@ -4,205 +4,205 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QBM7E0EHFP"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-QBM7E0EHFP');
+ window.dataLayer = window.dataLayer || [];
+ function gtag(){dataLayer.push(arguments);}
+ gtag('js', new Date());
+ gtag('config', 'G-QBM7E0EHFP');
 </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>50 Yaş Üstü Egzersiz Rehberi | UzunYaşa</title>
-    <meta name="description" content="Yaşa uygun, güvenli ve etkili egzersiz önerileri. Kas kaybını önleme, denge ve esneklik.">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../styles/main.css">
-    <style>
-        .guide-hero { position: relative; padding: 8rem 2rem 4rem; color: white; }
-        .guide-hero-bg { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; }
-        .guide-hero-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, rgba(25,81,87,0.9), rgba(42,107,115,0.85)); }
-        .guide-hero-content { position: relative; z-index: 2; max-width: 800px; margin: 0 auto; }
-        .guide-badge { display: inline-block; background: var(--accent); padding: 0.5rem 1rem; border-radius: 25px; font-size: 0.85rem; font-weight: 600; margin-bottom: 1rem; }
-        .guide-hero h1 { font-size: 2.5rem; font-weight: 800; margin-bottom: 1rem; }
-        .guide-hero p { font-size: 1.15rem; opacity: 0.95; }
-        .guide-content { max-width: 800px; margin: 0 auto; padding: 3rem 2rem; }
-        .guide-content h2 { font-size: 1.6rem; color: var(--primary); margin: 2.5rem 0 1rem; border-bottom: 2px solid var(--border); padding-bottom: 0.5rem; }
-        .guide-content h3 { font-size: 1.2rem; margin: 1.5rem 0 0.75rem; }
-        .guide-content p { margin-bottom: 1.25rem; font-size: 1.05rem; }
-        .guide-content ul { margin: 1rem 0 1.5rem 1.5rem; }
-        .guide-content li { margin-bottom: 0.75rem; }
-        .info-box { padding: 1.5rem; border-radius: 12px; margin: 1.5rem 0; }
-        .info-box.tip { background: #ECFDF5; border-left: 4px solid var(--success); }
-        .info-box.warning { background: #FEF3C7; border-left: 4px solid var(--warning); }
-        .info-box h4 { margin-bottom: 0.5rem; }
-        .exercise-type { background: var(--white); border: 2px solid var(--border); border-radius: 16px; padding: 1.5rem; margin: 1rem 0; }
-        .exercise-type h4 { color: var(--primary); margin-bottom: 0.75rem; font-size: 1.1rem; }
-        .week-plan { display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 0.75rem; margin: 1.5rem 0; }
-        .day-card { background: var(--white); border: 1px solid var(--border); border-radius: 10px; padding: 1rem; text-align: center; }
-        .day-card .day { font-weight: 700; color: var(--primary); margin-bottom: 0.25rem; }
-        .day-card .activity { font-size: 0.85rem; color: #6b7280; }
-        .guide-cta { background: linear-gradient(135deg, var(--primary), #2a6b73); padding: 3rem 2rem; border-radius: 20px; text-align: center; color: white; margin: 3rem 0; }
-        .cta-btn { display: inline-block; background: var(--accent); color: white; padding: 1rem 2rem; border-radius: 10px; text-decoration: none; font-weight: 600; }
-        
-        @media (max-width: 768px) { .guide-hero h1 { font-size: 2rem; } }
-    </style>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>50 Yaş Üstü Egzersiz Rehberi | UzunYaşa</title>
+ <meta name="description" content="Yaşa uygun, güvenli ve etkili egzersiz önerileri. Kas kaybını önleme, denge ve esneklik.">
+ <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="../../styles/main.css">
+ <style>
+ .guide-hero { position: relative; padding: 8rem 2rem 4rem; color: white; }
+ .guide-hero-bg { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; }
+ .guide-hero-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, rgba(25,81,87,0.9), rgba(42,107,115,0.85)); }
+ .guide-hero-content { position: relative; z-index: 2; max-width: 800px; margin: 0 auto; }
+ .guide-badge { display: inline-block; background: var(--accent); padding: 0.5rem 1rem; border-radius: 25px; font-size: 0.85rem; font-weight: 600; margin-bottom: 1rem; }
+ .guide-hero h1 { font-size: 2.5rem; font-weight: 800; margin-bottom: 1rem; }
+ .guide-hero p { font-size: 1.15rem; opacity: 0.95; }
+ .guide-content { max-width: 800px; margin: 0 auto; padding: 3rem 2rem; }
+ .guide-content h2 { font-size: 1.6rem; color: var(--primary); margin: 2.5rem 0 1rem; border-bottom: 2px solid var(--border); padding-bottom: 0.5rem; }
+ .guide-content h3 { font-size: 1.2rem; margin: 1.5rem 0 0.75rem; }
+ .guide-content p { margin-bottom: 1.25rem; font-size: 1.05rem; }
+ .guide-content ul { margin: 1rem 0 1.5rem 1.5rem; }
+ .guide-content li { margin-bottom: 0.75rem; }
+ .info-box { padding: 1.5rem; border-radius: 12px; margin: 1.5rem 0; }
+ .info-box.tip { background: #ECFDF5; border-left: 4px solid var(--success); }
+ .info-box.warning { background: #FEF3C7; border-left: 4px solid var(--warning); }
+ .info-box h4 { margin-bottom: 0.5rem; }
+ .exercise-type { background: var(--white); border: 2px solid var(--border); border-radius: 16px; padding: 1.5rem; margin: 1rem 0; }
+ .exercise-type h4 { color: var(--primary); margin-bottom: 0.75rem; font-size: 1.1rem; }
+ .week-plan { display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 0.75rem; margin: 1.5rem 0; }
+ .day-card { background: var(--white); border: 1px solid var(--border); border-radius: 10px; padding: 1rem; text-align: center; }
+ .day-card .day { font-weight: 700; color: var(--primary); margin-bottom: 0.25rem; }
+ .day-card .activity { font-size: 0.85rem; color: #6b7280; }
+ .guide-cta { background: linear-gradient(135deg, var(--primary), #2a6b73); padding: 3rem 2rem; border-radius: 20px; text-align: center; color: white; margin: 3rem 0; }
+ .cta-btn { display: inline-block; background: var(--accent); color: white; padding: 1rem 2rem; border-radius: 10px; text-decoration: none; font-weight: 600; }
+ 
+ @media (max-width: 768px) { .guide-hero h1 { font-size: 2rem; } }
+ </style>
 </head>
 <body>
-    <header class="header">
-        <div class="header-inner">
-            <a href="../../index.html"><img src="../../images/logo.svg" alt="UzunYaşa" class="logo-img"></a>
-            <a href="../rehberler.html" class="back-link">← Tüm Rehberler</a>
-        </div>
-    </header>
+ <header class="header">
+ <div class="header-inner">
+ <a href="../../index.html"><img src="../../images/logo.svg" alt="UzunYaşa" class="logo-img"></a>
+ <a href="../rehberler.html" class="back-link">← Tüm Rehberler</a>
+ </div>
+ </header>
 
-    <section class="guide-hero">
-        <img src="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?w=1400" alt="50+ Egzersiz" class="guide-hero-bg">
-        <div class="guide-hero-overlay"></div>
-        <div class="guide-hero-content">
-            <span class="guide-badge">💪 Egzersiz</span>
-            <h1>50 Yaş Üstü Egzersiz Rehberi</h1>
-            <p>Yaşa uygun, güvenli ve etkili egzersiz önerileri. Kas kaybını önleme, denge ve esneklik için stratejiler.</p>
-        </div>
-    </section>
+ <section class="guide-hero">
+ <img src="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?w=1400" alt="50+ Egzersiz" class="guide-hero-bg">
+ <div class="guide-hero-overlay"></div>
+ <div class="guide-hero-content">
+ <span class="guide-badge"> Egzersiz</span>
+ <h1>50 Yaş Üstü Egzersiz Rehberi</h1>
+ <p>Yaşa uygun, güvenli ve etkili egzersiz önerileri. Kas kaybını önleme, denge ve esneklik için stratejiler.</p>
+ </div>
+ </section>
 
-    <main class="guide-content">
-        <h2>50'den Sonra Egzersiz Neden Kritik?</h2>
-        <p>30 yaşından itibaren her 10 yılda kas kütlesinin %3-8'i kaybolur (sarkopeni). 50'den sonra bu hız artar. Ama iyi haber: <strong>Egzersiz bu süreci yavaşlatır, hatta tersine çevirir!</strong></p>
+ <main class="guide-content">
+ <h2>50'den Sonra Egzersiz Neden Kritik?</h2>
+ <p>30 yaşından itibaren her 10 yılda kas kütlesinin %3-8'i kaybolur (sarkopeni). 50'den sonra bu hız artar. Ama iyi haber: <strong>Egzersiz bu süreci yavaşlatır, hatta tersine çevirir!</strong></p>
 
-        <div class="info-box tip">
-            <h4>💡 Düzenli Egzersizin 50+ Faydaları</h4>
-            <ul>
-                <li>Kas ve kemik yoğunluğunu korur</li>
-                <li>Düşme riskini %30-40 azaltır</li>
-                <li>Bilişsel fonksiyonları korur</li>
-                <li>Depresyon riskini azaltır</li>
-                <li>Kronik hastalık yönetimini kolaylaştırır</li>
-                <li>Bağımsız yaşam süresini uzatır</li>
-            </ul>
-        </div>
+ <div class="info-box tip">
+ <h4> Düzenli Egzersizin 50+ Faydaları</h4>
+ <ul>
+ <li>Kas ve kemik yoğunluğunu korur</li>
+ <li>Düşme riskini %30-40 azaltır</li>
+ <li>Bilişsel fonksiyonları korur</li>
+ <li>Depresyon riskini azaltır</li>
+ <li>Kronik hastalık yönetimini kolaylaştırır</li>
+ <li>Bağımsız yaşam süresini uzatır</li>
+ </ul>
+ </div>
 
-        <h2>4 Temel Egzersiz Türü</h2>
+ <h2>4 Temel Egzersiz Türü</h2>
 
-        <div class="exercise-type">
-            <h4>1. 🏃 Aerobik (Kardio)</h4>
-            <p>Kalp ve akciğer sağlığı için. Haftada 150 dk orta yoğunluk veya 75 dk yüksek yoğunluk.</p>
-            <ul>
-                <li>Tempolu yürüyüş (en güvenli)</li>
-                <li>Yüzme (eklemlere nazik)</li>
-                <li>Bisiklet</li>
-                <li>Dans</li>
-                <li>Su aerobiği</li>
-            </ul>
-        </div>
+ <div class="exercise-type">
+ <h4>1. Aerobik (Kardio)</h4>
+ <p>Kalp ve akciğer sağlığı için. Haftada 150 dk orta yoğunluk veya 75 dk yüksek yoğunluk.</p>
+ <ul>
+ <li>Tempolu yürüyüş (en güvenli)</li>
+ <li>Yüzme (eklemlere nazik)</li>
+ <li>Bisiklet</li>
+ <li>Dans</li>
+ <li>Su aerobiği</li>
+ </ul>
+ </div>
 
-        <div class="exercise-type">
-            <h4>2. 💪 Direnç (Güç) Egzersizi</h4>
-            <p>Kas kaybını önlemek için ŞART. Haftada 2-3 gün, tüm büyük kas grupları.</p>
-            <ul>
-                <li>Vücut ağırlığı: Squat, lunge, şınav (modifiye)</li>
-                <li>Direnç bandları</li>
-                <li>Hafif dumbell</li>
-                <li>Makine ağırlıkları</li>
-            </ul>
-            <p><em>Başlangıç: Her hareket 8-12 tekrar, 2 set</em></p>
-        </div>
+ <div class="exercise-type">
+ <h4>2. Direnç (Güç) Egzersizi</h4>
+ <p>Kas kaybını önlemek için ŞART. Haftada 2-3 gün, tüm büyük kas grupları.</p>
+ <ul>
+ <li>Vücut ağırlığı: Squat, lunge, şınav (modifiye)</li>
+ <li>Direnç bandları</li>
+ <li>Hafif dumbell</li>
+ <li>Makine ağırlıkları</li>
+ </ul>
+ <p><em>Başlangıç: Her hareket 8-12 tekrar, 2 set</em></p>
+ </div>
 
-        <div class="exercise-type">
-            <h4>3. ⚖️ Denge Egzersizleri</h4>
-            <p>Düşme önleme için kritik. Her gün veya gün aşırı.</p>
-            <ul>
-                <li>Tek ayak üzerinde durma (tezgaha tutunarak)</li>
-                <li>Topuk-burun yürüyüşü</li>
-                <li>Tai Chi</li>
-                <li>Yoga (sandalye destekli olabilir)</li>
-            </ul>
-        </div>
+ <div class="exercise-type">
+ <h4>3. Denge Egzersizleri</h4>
+ <p>Düşme önleme için kritik. Her gün veya gün aşırı.</p>
+ <ul>
+ <li>Tek ayak üzerinde durma (tezgaha tutunarak)</li>
+ <li>Topuk-burun yürüyüşü</li>
+ <li>Tai Chi</li>
+ <li>Yoga (sandalye destekli olabilir)</li>
+ </ul>
+ </div>
 
-        <div class="exercise-type">
-            <h4>4. 🧘 Esneklik (Germe)</h4>
-            <p>Eklem sağlığı ve hareket açıklığı için. Her antrenman sonrası + haftada 2-3 ayrı seans.</p>
-            <ul>
-                <li>Statik germeler (30 saniye tutma)</li>
-                <li>Yoga</li>
-                <li>Pilates</li>
-                <li>Sabah germe rutini</li>
-            </ul>
-        </div>
+ <div class="exercise-type">
+ <h4>4. Esneklik (Germe)</h4>
+ <p>Eklem sağlığı ve hareket açıklığı için. Her antrenman sonrası + haftada 2-3 ayrı seans.</p>
+ <ul>
+ <li>Statik germeler (30 saniye tutma)</li>
+ <li>Yoga</li>
+ <li>Pilates</li>
+ <li>Sabah germe rutini</li>
+ </ul>
+ </div>
 
-        <h2>Örnek Haftalık Program</h2>
-        
-        <div class="week-plan">
-            <div class="day-card">
-                <div class="day">Pazartesi</div>
-                <div class="activity">Yürüyüş 30dk + Üst vücut güç</div>
-            </div>
-            <div class="day-card">
-                <div class="day">Salı</div>
-                <div class="activity">Denge + Esneklik (Yoga 30dk)</div>
-            </div>
-            <div class="day-card">
-                <div class="day">Çarşamba</div>
-                <div class="activity">Yürüyüş 30dk + Alt vücut güç</div>
-            </div>
-            <div class="day-card">
-                <div class="day">Perşembe</div>
-                <div class="activity">Dinlenme veya hafif germe</div>
-            </div>
-            <div class="day-card">
-                <div class="day">Cuma</div>
-                <div class="activity">Yüzme veya bisiklet 30dk</div>
-            </div>
-            <div class="day-card">
-                <div class="day">Cumartesi</div>
-                <div class="activity">Tüm vücut güç + Denge</div>
-            </div>
-            <div class="day-card">
-                <div class="day">Pazar</div>
-                <div class="activity">Hafif yürüyüş veya dinlenme</div>
-            </div>
-        </div>
+ <h2>Örnek Haftalık Program</h2>
+ 
+ <div class="week-plan">
+ <div class="day-card">
+ <div class="day">Pazartesi</div>
+ <div class="activity">Yürüyüş 30dk + Üst vücut güç</div>
+ </div>
+ <div class="day-card">
+ <div class="day">Salı</div>
+ <div class="activity">Denge + Esneklik (Yoga 30dk)</div>
+ </div>
+ <div class="day-card">
+ <div class="day">Çarşamba</div>
+ <div class="activity">Yürüyüş 30dk + Alt vücut güç</div>
+ </div>
+ <div class="day-card">
+ <div class="day">Perşembe</div>
+ <div class="activity">Dinlenme veya hafif germe</div>
+ </div>
+ <div class="day-card">
+ <div class="day">Cuma</div>
+ <div class="activity">Yüzme veya bisiklet 30dk</div>
+ </div>
+ <div class="day-card">
+ <div class="day">Cumartesi</div>
+ <div class="activity">Tüm vücut güç + Denge</div>
+ </div>
+ <div class="day-card">
+ <div class="day">Pazar</div>
+ <div class="activity">Hafif yürüyüş veya dinlenme</div>
+ </div>
+ </div>
 
-        <h2>Güvenlik Kuralları</h2>
+ <h2>Güvenlik Kuralları</h2>
 
-        <div class="info-box warning">
-            <h4>⚠️ Başlamadan Önce</h4>
-            <ul>
-                <li>Kronik hastalığınız varsa doktorunuza danışın</li>
-                <li>Yavaş başlayın, kademeli artırın</li>
-                <li>Ağrı hissederseniz durun</li>
-                <li>Bol su için</li>
-                <li>Uygun ayakkabı ve kıyafet giyin</li>
-            </ul>
-        </div>
+ <div class="info-box warning">
+ <h4> Başlamadan Önce</h4>
+ <ul>
+ <li>Kronik hastalığınız varsa doktorunuza danışın</li>
+ <li>Yavaş başlayın, kademeli artırın</li>
+ <li>Ağrı hissederseniz durun</li>
+ <li>Bol su için</li>
+ <li>Uygun ayakkabı ve kıyafet giyin</li>
+ </ul>
+ </div>
 
-        <h3>Kaçınılması Gerekenler</h3>
-        <ul>
-            <li>❌ Ani, patlayıcı hareketler</li>
-            <li>❌ Çok ağır yükler (ego lifting)</li>
-            <li>❌ Isınmadan yoğun egzersiz</li>
-            <li>❌ Aşırı sıcak/soğukta açık havada</li>
-            <li>❌ Hasta veya ateşliyken egzersiz</li>
-        </ul>
+ <h3>Kaçınılması Gerekenler</h3>
+ <ul>
+ <li> Ani, patlayıcı hareketler</li>
+ <li> Çok ağır yükler (ego lifting)</li>
+ <li> Isınmadan yoğun egzersiz</li>
+ <li> Aşırı sıcak/soğukta açık havada</li>
+ <li> Hasta veya ateşliyken egzersiz</li>
+ </ul>
 
-        <h2>Motivasyon İpuçları</h2>
-        <ul>
-            <li>Bir arkadaş veya grup bulun</li>
-            <li>Rutini aynı saate bağlayın</li>
-            <li>Küçük hedefler koyun ve kutlayın</li>
-            <li>Müzik veya podcast dinleyin</li>
-            <li>İlerlemenizi takip edin (adım sayar, günlük)</li>
-        </ul>
+ <h2>Motivasyon İpuçları</h2>
+ <ul>
+ <li>Bir arkadaş veya grup bulun</li>
+ <li>Rutini aynı saate bağlayın</li>
+ <li>Küçük hedefler koyun ve kutlayın</li>
+ <li>Müzik veya podcast dinleyin</li>
+ <li>İlerlemenizi takip edin (adım sayar, günlük)</li>
+ </ul>
 
-        <div class="info-box tip">
-            <h4>✅ Hatırlatma</h4>
-            <p>"En iyi egzersiz, yaptığınız egzersizdir." Mükemmel program aramak yerine, tutarlı olmaya odaklanın. Günde 10 dakika bile faydalıdır!</p>
-        </div>
+ <div class="info-box tip">
+ <h4> Hatırlatma</h4>
+ <p>"En iyi egzersiz, yaptığınız egzersizdir." Mükemmel program aramak yerine, tutarlı olmaya odaklanın. Günde 10 dakika bile faydalıdır!</p>
+ </div>
 
-        <div class="guide-cta">
-            <h3>Size özel egzersiz planı mı istiyorsunuz?</h3>
-            <p>Sağlık durumunuza ve hedeflerinize uygun program oluşturalım.</p>
-            <a href="../test.html" class="cta-btn">Teste Başla →</a>
-        </div>
-    </main>
+ <div class="guide-cta">
+ <h3>Size özel egzersiz planı mı istiyorsunuz?</h3>
+ <p>Sağlık durumunuza ve hedeflerinize uygun program oluşturalım.</p>
+ <a href="../test.html" class="cta-btn">Teste Başla →</a>
+ </div>
+ </main>
 
-    <footer><p>© 2026 UzunYaşa. Tüm hakları saklıdır.</p></footer>
+ <footer><p>© 2026 UzunYaşa. Tüm hakları saklıdır.</p></footer>
 </body>
 </html>
