--- a/pages/rehberler/plato-kirma.html
+++ b/pages/rehberler/plato-kirma.html
@@ -4,189 +4,189 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QBM7E0EHFP"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-QBM7E0EHFP');
+ window.dataLayer = window.dataLayer || [];
+ function gtag(){dataLayer.push(arguments);}
+ gtag('js', new Date());
+ gtag('config', 'G-QBM7E0EHFP');
 </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plato Kırma Rehberi | UzunYaşa</title>
-    <meta name="description" content="Kilo verirken takılıp kaldınız mı? Metabolizmayı hızlandırma ve plato dönemini aşma stratejileri.">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../styles/main.css">
-    <style>
-        .guide-hero { position: relative; padding: 8rem 2rem 4rem; color: white; }
-        .guide-hero-bg { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; }
-        .guide-hero-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, rgba(25,81,87,0.9), rgba(42,107,115,0.85)); }
-        .guide-hero-content { position: relative; z-index: 2; max-width: 800px; margin: 0 auto; }
-        .guide-badge { display: inline-block; background: var(--accent); padding: 0.5rem 1rem; border-radius: 25px; font-size: 0.85rem; font-weight: 600; margin-bottom: 1rem; }
-        .guide-hero h1 { font-size: 2.5rem; font-weight: 800; margin-bottom: 1rem; }
-        .guide-hero p { font-size: 1.15rem; opacity: 0.95; }
-        .guide-content { max-width: 800px; margin: 0 auto; padding: 3rem 2rem; }
-        .guide-content h2 { font-size: 1.6rem; color: var(--primary); margin: 2.5rem 0 1rem; border-bottom: 2px solid var(--border); padding-bottom: 0.5rem; }
-        .guide-content h3 { font-size: 1.2rem; margin: 1.5rem 0 0.75rem; }
-        .guide-content p { margin-bottom: 1.25rem; font-size: 1.05rem; }
-        .guide-content ul, .guide-content ol { margin: 1rem 0 1.5rem 1.5rem; }
-        .guide-content li { margin-bottom: 0.75rem; }
-        .info-box { padding: 1.5rem; border-radius: 12px; margin: 1.5rem 0; }
-        .info-box.tip { background: #ECFDF5; border-left: 4px solid var(--success); }
-        .info-box.warning { background: #FEF3C7; border-left: 4px solid var(--warning); }
-        .info-box h4 { margin-bottom: 0.5rem; }
-        .strategy-card { background: var(--white); border: 2px solid var(--border); border-radius: 16px; padding: 1.5rem; margin: 1rem 0; }
-        .strategy-card h4 { color: var(--primary); margin-bottom: 0.75rem; display: flex; align-items: center; gap: 0.5rem; }
-        .strategy-card h4 .number { background: var(--primary); color: white; width: 28px; height: 28px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 0.9rem; }
-        .guide-cta { background: linear-gradient(135deg, var(--primary), #2a6b73); padding: 3rem 2rem; border-radius: 20px; text-align: center; color: white; margin: 3rem 0; }
-        .cta-btn { display: inline-block; background: var(--accent); color: white; padding: 1rem 2rem; border-radius: 10px; text-decoration: none; font-weight: 600; }
-        
-        @media (max-width: 768px) { .guide-hero h1 { font-size: 2rem; } }
-    </style>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Plato Kırma Rehberi | UzunYaşa</title>
+ <meta name="description" content="Kilo verirken takılıp kaldınız mı? Metabolizmayı hızlandırma ve plato dönemini aşma stratejileri.">
+ <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="../../styles/main.css">
+ <style>
+ .guide-hero { position: relative; padding: 8rem 2rem 4rem; color: white; }
+ .guide-hero-bg { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; }
+ .guide-hero-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, rgba(25,81,87,0.9), rgba(42,107,115,0.85)); }
+ .guide-hero-content { position: relative; z-index: 2; max-width: 800px; margin: 0 auto; }
+ .guide-badge { display: inline-block; background: var(--accent); padding: 0.5rem 1rem; border-radius: 25px; font-size: 0.85rem; font-weight: 600; margin-bottom: 1rem; }
+ .guide-hero h1 { font-size: 2.5rem; font-weight: 800; margin-bottom: 1rem; }
+ .guide-hero p { font-size: 1.15rem; opacity: 0.95; }
+ .guide-content { max-width: 800px; margin: 0 auto; padding: 3rem 2rem; }
+ .guide-content h2 { font-size: 1.6rem; color: var(--primary); margin: 2.5rem 0 1rem; border-bottom: 2px solid var(--border); padding-bottom: 0.5rem; }
+ .guide-content h3 { font-size: 1.2rem; margin: 1.5rem 0 0.75rem; }
+ .guide-content p { margin-bottom: 1.25rem; font-size: 1.05rem; }
+ .guide-content ul, .guide-content ol { margin: 1rem 0 1.5rem 1.5rem; }
+ .guide-content li { margin-bottom: 0.75rem; }
+ .info-box { padding: 1.5rem; border-radius: 12px; margin: 1.5rem 0; }
+ .info-box.tip { background: #ECFDF5; border-left: 4px solid var(--success); }
+ .info-box.warning { background: #FEF3C7; border-left: 4px solid var(--warning); }
+ .info-box h4 { margin-bottom: 0.5rem; }
+ .strategy-card { background: var(--white); border: 2px solid var(--border); border-radius: 16px; padding: 1.5rem; margin: 1rem 0; }
+ .strategy-card h4 { color: var(--primary); margin-bottom: 0.75rem; display: flex; align-items: center; gap: 0.5rem; }
+ .strategy-card h4 .number { background: var(--primary); color: white; width: 28px; height: 28px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 0.9rem; }
+ .guide-cta { background: linear-gradient(135deg, var(--primary), #2a6b73); padding: 3rem 2rem; border-radius: 20px; text-align: center; color: white; margin: 3rem 0; }
+ .cta-btn { display: inline-block; background: var(--accent); color: white; padding: 1rem 2rem; border-radius: 10px; text-decoration: none; font-weight: 600; }
+ 
+ @media (max-width: 768px) { .guide-hero h1 { font-size: 2rem; } }
+ </style>
 </head>
 <body>
-    <header class="header">
-        <div class="header-inner">
-            <a href="../../index.html"><img src="../../images/logo.svg" alt="UzunYaşa" class="logo-img"></a>
-            <a href="../rehberler.html" class="back-link">← Tüm Rehberler</a>
-        </div>
-    </header>
+ <header class="header">
+ <div class="header-inner">
+ <a href="../../index.html"><img src="../../images/logo.svg" alt="UzunYaşa" class="logo-img"></a>
+ <a href="../rehberler.html" class="back-link">← Tüm Rehberler</a>
+ </div>
+ </header>
 
-    <section class="guide-hero">
-        <img src="https://images.unsplash.com/photo-1538805060514-97d9cc17730c?w=1400" alt="Plato Kırma" class="guide-hero-bg">
-        <div class="guide-hero-overlay"></div>
-        <div class="guide-hero-content">
-            <span class="guide-badge">⚖️ Kilo Yönetimi</span>
-            <h1>Plato Kırma Rehberi</h1>
-            <p>Kilo verirken takılıp kaldınız mı? Metabolizmayı hızlandırma ve plato dönemini aşma için kanıta dayalı stratejiler.</p>
-        </div>
-    </section>
+ <section class="guide-hero">
+ <img src="https://images.unsplash.com/photo-1538805060514-97d9cc17730c?w=1400" alt="Plato Kırma" class="guide-hero-bg">
+ <div class="guide-hero-overlay"></div>
+ <div class="guide-hero-content">
+ <span class="guide-badge"> Kilo Yönetimi</span>
+ <h1>Plato Kırma Rehberi</h1>
+ <p>Kilo verirken takılıp kaldınız mı? Metabolizmayı hızlandırma ve plato dönemini aşma için kanıta dayalı stratejiler.</p>
+ </div>
+ </section>
 
-    <main class="guide-content">
-        <h2>Plato Nedir?</h2>
-        <p>Kilo verme platosu, aynı beslenme ve egzersiz programını uygularken <strong>3-4 hafta boyunca kilo kaybının durması</strong> durumudur. Bu tamamen normaldir ve neredeyse herkesin başına gelir.</p>
-        
-        <div class="info-box tip">
-            <h4>💡 Neden Olur?</h4>
-            <p>Vücudunuz harika bir adaptasyon makinesi. Kilo verdikçe:</p>
-            <ul>
-                <li>Metabolik hız düşer (daha az enerji harcanır)</li>
-                <li>Leptin hormonu azalır (açlık artar)</li>
-                <li>Vücut enerji tasarruf moduna geçer</li>
-                <li>Aynı kalori açığı artık yetersiz kalır</li>
-            </ul>
-        </div>
+ <main class="guide-content">
+ <h2>Plato Nedir?</h2>
+ <p>Kilo verme platosu, aynı beslenme ve egzersiz programını uygularken <strong>3-4 hafta boyunca kilo kaybının durması</strong> durumudur. Bu tamamen normaldir ve neredeyse herkesin başına gelir.</p>
+ 
+ <div class="info-box tip">
+ <h4> Neden Olur?</h4>
+ <p>Vücudunuz harika bir adaptasyon makinesi. Kilo verdikçe:</p>
+ <ul>
+ <li>Metabolik hız düşer (daha az enerji harcanır)</li>
+ <li>Leptin hormonu azalır (açlık artar)</li>
+ <li>Vücut enerji tasarruf moduna geçer</li>
+ <li>Aynı kalori açığı artık yetersiz kalır</li>
+ </ul>
+ </div>
 
-        <h2>Gerçek Plato mu?</h2>
-        <p>Önce şunları kontrol edin:</p>
-        <ul>
-            <li>Son 4 haftada tartı hiç oynamadı mı?</li>
-            <li>Bel çevresi de değişmedi mi? (Bazen tartı durur ama cm düşer)</li>
-            <li>Kalori takibinde "sızıntılar" olabilir mi?</li>
-            <li>Porsiyon boyutları zamanla büyümüş olabilir mi?</li>
-        </ul>
+ <h2>Gerçek Plato mu?</h2>
+ <p>Önce şunları kontrol edin:</p>
+ <ul>
+ <li>Son 4 haftada tartı hiç oynamadı mı?</li>
+ <li>Bel çevresi de değişmedi mi? (Bazen tartı durur ama cm düşer)</li>
+ <li>Kalori takibinde "sızıntılar" olabilir mi?</li>
+ <li>Porsiyon boyutları zamanla büyümüş olabilir mi?</li>
+ </ul>
 
-        <div class="info-box warning">
-            <h4>⚠️ Haftalık 0.5-1 kg dalgalanma normaldir</h4>
-            <p>Su tutulumu, adet döngüsü, tuzlu yemek, kabızlık... Bunlar tartıyı oynatır. 4 haftalık ortalamaya bakın.</p>
-        </div>
+ <div class="info-box warning">
+ <h4> Haftalık 0.5-1 kg dalgalanma normaldir</h4>
+ <p>Su tutulumu, adet döngüsü, tuzlu yemek, kabızlık... Bunlar tartıyı oynatır. 4 haftalık ortalamaya bakın.</p>
+ </div>
 
-        <h2>Plato Kırma Stratejileri</h2>
+ <h2>Plato Kırma Stratejileri</h2>
 
-        <div class="strategy-card">
-            <h4><span class="number">1</span> Kalori İhtiyacınızı Yeniden Hesaplayın</h4>
-            <p>10 kg verdiyseniz, kalori ihtiyacınız da düştü. Eski hesaplamalar artık geçersiz.</p>
-            <p><strong>Örnek:</strong> 90 kg → 80 kg geçiş = günde ~100-150 kalori daha az ihtiyaç</p>
-            <p><em>Çözüm: Yeni kilonuza göre kalori açığını yeniden ayarlayın.</em></p>
-        </div>
+ <div class="strategy-card">
+ <h4><span class="number">1</span> Kalori İhtiyacınızı Yeniden Hesaplayın</h4>
+ <p>10 kg verdiyseniz, kalori ihtiyacınız da düştü. Eski hesaplamalar artık geçersiz.</p>
+ <p><strong>Örnek:</strong> 90 kg → 80 kg geçiş = günde ~100-150 kalori daha az ihtiyaç</p>
+ <p><em>Çözüm: Yeni kilonuza göre kalori açığını yeniden ayarlayın.</em></p>
+ </div>
 
-        <div class="strategy-card">
-            <h4><span class="number">2</span> Diet Break (1-2 Hafta Mola)</h4>
-            <p>Paradoksal ama etkili: 1-2 hafta kalori açığı olmadan (bakım kalorisi ile) yiyin.</p>
-            <ul>
-                <li>Leptin seviyeleri normale döner</li>
-                <li>Metabolizma hızlanır</li>
-                <li>Psikolojik rahatlama sağlar</li>
-            </ul>
-            <p><em>Sonra yeniden açık oluşturun - vücut daha iyi tepki verecektir.</em></p>
-        </div>
+ <div class="strategy-card">
+ <h4><span class="number">2</span> Diet Break (1-2 Hafta Mola)</h4>
+ <p>Paradoksal ama etkili: 1-2 hafta kalori açığı olmadan (bakım kalorisi ile) yiyin.</p>
+ <ul>
+ <li>Leptin seviyeleri normale döner</li>
+ <li>Metabolizma hızlanır</li>
+ <li>Psikolojik rahatlama sağlar</li>
+ </ul>
+ <p><em>Sonra yeniden açık oluşturun - vücut daha iyi tepki verecektir.</em></p>
+ </div>
 
-        <div class="strategy-card">
-            <h4><span class="number">3</span> Egzersiz Çeşitliliği</h4>
-            <p>Vücut aynı antrenmanın verimini düşürür. Değişiklik yapın:</p>
-            <ul>
-                <li>Sadece kardiyo yapıyorsanız → ağırlık ekleyin</li>
-                <li>Aynı tempoda yürüyorsanız → HIIT deneyin</li>
-                <li>Aynı rotayı koşuyorsanız → yol değiştirin, tepe ekleyin</li>
-            </ul>
-        </div>
+ <div class="strategy-card">
+ <h4><span class="number">3</span> Egzersiz Çeşitliliği</h4>
+ <p>Vücut aynı antrenmanın verimini düşürür. Değişiklik yapın:</p>
+ <ul>
+ <li>Sadece kardiyo yapıyorsanız → ağırlık ekleyin</li>
+ <li>Aynı tempoda yürüyorsanız → HIIT deneyin</li>
+ <li>Aynı rotayı koşuyorsanız → yol değiştirin, tepe ekleyin</li>
+ </ul>
+ </div>
 
-        <div class="strategy-card">
-            <h4><span class="number">4</span> NEAT'i Artırın</h4>
-            <p>NEAT = Non-Exercise Activity Thermogenesis (egzersiz dışı hareketler)</p>
-            <ul>
-                <li>Ayakta durma toplantıları</li>
-                <li>Merdiven kullanma</li>
-                <li>Park yerini uzağa bırakma</li>
-                <li>Ev işleri, bahçe işleri</li>
-            </ul>
-            <p><em>NEAT, günlük kalori harcamasının %15-30'u olabilir!</em></p>
-        </div>
+ <div class="strategy-card">
+ <h4><span class="number">4</span> NEAT'i Artırın</h4>
+ <p>NEAT = Non-Exercise Activity Thermogenesis (egzersiz dışı hareketler)</p>
+ <ul>
+ <li>Ayakta durma toplantıları</li>
+ <li>Merdiven kullanma</li>
+ <li>Park yerini uzağa bırakma</li>
+ <li>Ev işleri, bahçe işleri</li>
+ </ul>
+ <p><em>NEAT, günlük kalori harcamasının %15-30'u olabilir!</em></p>
+ </div>
 
-        <div class="strategy-card">
-            <h4><span class="number">5</span> Protein Artırın</h4>
-            <p>Protein termik etkisi yüksektir (sindirmek için %20-30 kalori harcanır). Ayrıca kas koruması sağlar.</p>
-            <p><strong>Hedef:</strong> Kg başına 1.6-2.2g protein (70 kg = 112-154g/gün)</p>
-        </div>
+ <div class="strategy-card">
+ <h4><span class="number">5</span> Protein Artırın</h4>
+ <p>Protein termik etkisi yüksektir (sindirmek için %20-30 kalori harcanır). Ayrıca kas koruması sağlar.</p>
+ <p><strong>Hedef:</strong> Kg başına 1.6-2.2g protein (70 kg = 112-154g/gün)</p>
+ </div>
 
-        <div class="strategy-card">
-            <h4><span class="number">6</span> Refeed Günleri</h4>
-            <p>Haftada 1 gün karbonhidrat artırın (yağı sabit tutun). Bu:</p>
-            <ul>
-                <li>Leptin'i artırır</li>
-                <li>Tiroid fonksiyonunu destekler</li>
-                <li>Glikojen depolarını doldurur</li>
-            </ul>
-            <p><em>Bu "cheat day" değil, stratejik karbonhidrat günü.</em></p>
-        </div>
+ <div class="strategy-card">
+ <h4><span class="number">6</span> Refeed Günleri</h4>
+ <p>Haftada 1 gün karbonhidrat artırın (yağı sabit tutun). Bu:</p>
+ <ul>
+ <li>Leptin'i artırır</li>
+ <li>Tiroid fonksiyonunu destekler</li>
+ <li>Glikojen depolarını doldurur</li>
+ </ul>
+ <p><em>Bu "cheat day" değil, stratejik karbonhidrat günü.</em></p>
+ </div>
 
-        <div class="strategy-card">
-            <h4><span class="number">7</span> Uyku ve Stresi Düzeltin</h4>
-            <p>Yetersiz uyku ve kronik stres kortizol yükseltir → su tutulumu, yağ depolama.</p>
-            <ul>
-                <li>7-9 saat uyku hedefleyin</li>
-                <li>Stres yönetimi (meditasyon, yürüyüş)</li>
-                <li>Aşırı antrenman mı yapıyorsunuz? Deload haftası deneyin.</li>
-            </ul>
-        </div>
+ <div class="strategy-card">
+ <h4><span class="number">7</span> Uyku ve Stresi Düzeltin</h4>
+ <p>Yetersiz uyku ve kronik stres kortizol yükseltir → su tutulumu, yağ depolama.</p>
+ <ul>
+ <li>7-9 saat uyku hedefleyin</li>
+ <li>Stres yönetimi (meditasyon, yürüyüş)</li>
+ <li>Aşırı antrenman mı yapıyorsunuz? Deload haftası deneyin.</li>
+ </ul>
+ </div>
 
-        <h2>Ne Yapmamalısınız?</h2>
-        <ul>
-            <li>❌ Kalorileri daha da düşürmek (zaten düşükse)</li>
-            <li>❌ Saatlerce kardio eklemek</li>
-            <li>❌ "Mucize" supplement'lere başvurmak</li>
-            <li>❌ Panikleyip programı bırakmak</li>
-            <li>❌ Tartıya takıntılı hale gelmek</li>
-        </ul>
+ <h2>Ne Yapmamalısınız?</h2>
+ <ul>
+ <li> Kalorileri daha da düşürmek (zaten düşükse)</li>
+ <li> Saatlerce kardio eklemek</li>
+ <li> "Mucize" supplement'lere başvurmak</li>
+ <li> Panikleyip programı bırakmak</li>
+ <li> Tartıya takıntılı hale gelmek</li>
+ </ul>
 
-        <h2>Plato Süresi</h2>
-        <p>Tipik plato 2-4 hafta sürer. Doğru stratejilerle genellikle 1-2 hafta içinde kırılır. 6 haftadan uzun sürüyorsa:</p>
-        <ul>
-            <li>Tiroid fonksiyonlarını kontrol ettirin</li>
-            <li>Bir diyetisyene danışın</li>
-            <li>Egzersiz programınızı bir uzmana değerlendirtin</li>
-        </ul>
+ <h2>Plato Süresi</h2>
+ <p>Tipik plato 2-4 hafta sürer. Doğru stratejilerle genellikle 1-2 hafta içinde kırılır. 6 haftadan uzun sürüyorsa:</p>
+ <ul>
+ <li>Tiroid fonksiyonlarını kontrol ettirin</li>
+ <li>Bir diyetisyene danışın</li>
+ <li>Egzersiz programınızı bir uzmana değerlendirtin</li>
+ </ul>
 
-        <div class="info-box tip">
-            <h4>✅ Unutmayın</h4>
-            <p>Plato, vücudunuzun sağlıklı olduğunun işaretidir. Adaptasyon yapabiliyor. Bu geçici bir durum - sabır ve strateji ile aşılır.</p>
-        </div>
+ <div class="info-box tip">
+ <h4> Unutmayın</h4>
+ <p>Plato, vücudunuzun sağlıklı olduğunun işaretidir. Adaptasyon yapabiliyor. Bu geçici bir durum - sabır ve strateji ile aşılır.</p>
+ </div>
 
-        <div class="guide-cta">
-            <h3>Kişisel plato kırma planı mı istiyorsunuz?</h3>
-            <p>AI diyetisyenimiz size özel stratejiler önerebilir.</p>
-            <a href="../ecem-app.html" class="cta-btn">Ecem ile Konuş →</a>
-        </div>
-    </main>
+ <div class="guide-cta">
+ <h3>Kişisel plato kırma planı mı istiyorsunuz?</h3>
+ <p>AI diyetisyenimiz size özel stratejiler önerebilir.</p>
+ <a href="../ecem-app.html" class="cta-btn">Ecem ile Konuş →</a>
+ </div>
+ </main>
 
-    <footer><p>© 2026 UzunYaşa. Tüm hakları saklıdır.</p></footer>
+ <footer><p>© 2026 UzunYaşa. Tüm hakları saklıdır.</p></footer>
 </body>
 </html>
