--- a/pages/tedavi/gastrik-bypass.html
+++ b/pages/tedavi/gastrik-bypass.html
@@ -4,141 +4,141 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QBM7E0EHFP"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-QBM7E0EHFP');
+ window.dataLayer = window.dataLayer || [];
+ function gtag(){dataLayer.push(arguments);}
+ gtag('js', new Date());
+ gtag('config', 'G-QBM7E0EHFP');
 </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gastrik Bypass (Roux-en-Y) Ameliyatı | UzunYaşa</title>
-    <meta name="description" content="Gastrik bypass ameliyatı nedir, nasıl yapılır? Sleeve'den farkı, avantajları ve kimler için uygun olduğunu öğrenin.">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../styles/main.css">
-    <link rel="stylesheet" href="../../styles/content-page.css">
-    <style>
-        article { max-width: 800px; margin: 0 auto; padding: 7rem 2rem 4rem; }
-        .breadcrumb { font-size: 0.9rem; color: var(--text-gray); margin-bottom: 1.5rem; }
-        .breadcrumb a { color: var(--primary); text-decoration: none; }
-        h1 { font-size: 2.5rem; font-weight: 800; line-height: 1.2; margin-bottom: 1rem; color: var(--text); }
-        .subtitle { font-size: 1.2rem; color: var(--text-gray); margin-bottom: 2rem; }
-        .content p { margin-bottom: 1.5rem; font-size: 1.05rem; }
-        .content h2 { font-size: 1.5rem; font-weight: 700; margin: 2.5rem 0 1rem; color: var(--primary); }
-        .content ul { margin: 1.5rem 0; padding-left: 1.5rem; }
-        .content li { margin-bottom: 0.5rem; }
-        .info-box { background: #eff6ff; border-left: 4px solid #3b82f6; padding: 1.5rem; border-radius: 0 12px 12px 0; margin: 2rem 0; }
-        .warning-box { background: #fef3c7; border-left: 4px solid #f59e0b; padding: 1.5rem; border-radius: 0 12px 12px 0; margin: 2rem 0; }
-        .success-box { background: #f0fdf4; border-left: 4px solid #10b981; padding: 1.5rem; border-radius: 0 12px 12px 0; margin: 2rem 0; }
-        .stat-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 1rem; margin: 2rem 0; }
-        .stat-card { background: white; border: 1px solid #e5e7eb; border-radius: 12px; padding: 1.5rem; text-align: center; }
-        .stat-card .number { font-size: 2rem; font-weight: 800; color: var(--primary); }
-        .stat-card .label { font-size: 0.85rem; color: var(--text-gray); }
-        .cta-box { background: linear-gradient(135deg, var(--primary), #2a7d83); color: white; padding: 2rem; border-radius: 16px; text-align: center; margin: 3rem 0; }
-        .cta-btn { display: inline-block; background: white; color: var(--primary); padding: 0.75rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: 600; }
-        
-        @media (max-width: 640px) { h1 { font-size: 1.8rem; } .stat-grid { grid-template-columns: 1fr; } }
-    </style>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Gastrik Bypass (Roux-en-Y) Ameliyatı | UzunYaşa</title>
+ <meta name="description" content="Gastrik bypass ameliyatı nedir, nasıl yapılır? Sleeve'den farkı, avantajları ve kimler için uygun olduğunu öğrenin.">
+ <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="../../styles/main.css">
+ <link rel="stylesheet" href="../../styles/content-page.css">
+ <style>
+ article { max-width: 800px; margin: 0 auto; padding: 7rem 2rem 4rem; }
+ .breadcrumb { font-size: 0.9rem; color: var(--text-gray); margin-bottom: 1.5rem; }
+ .breadcrumb a { color: var(--primary); text-decoration: none; }
+ h1 { font-size: 2.5rem; font-weight: 800; line-height: 1.2; margin-bottom: 1rem; color: var(--text); }
+ .subtitle { font-size: 1.2rem; color: var(--text-gray); margin-bottom: 2rem; }
+ .content p { margin-bottom: 1.5rem; font-size: 1.05rem; }
+ .content h2 { font-size: 1.5rem; font-weight: 700; margin: 2.5rem 0 1rem; color: var(--primary); }
+ .content ul { margin: 1.5rem 0; padding-left: 1.5rem; }
+ .content li { margin-bottom: 0.5rem; }
+ .info-box { background: #eff6ff; border-left: 4px solid #3b82f6; padding: 1.5rem; border-radius: 0 12px 12px 0; margin: 2rem 0; }
+ .warning-box { background: #fef3c7; border-left: 4px solid #f59e0b; padding: 1.5rem; border-radius: 0 12px 12px 0; margin: 2rem 0; }
+ .success-box { background: #f0fdf4; border-left: 4px solid #10b981; padding: 1.5rem; border-radius: 0 12px 12px 0; margin: 2rem 0; }
+ .stat-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 1rem; margin: 2rem 0; }
+ .stat-card { background: white; border: 1px solid #e5e7eb; border-radius: 12px; padding: 1.5rem; text-align: center; }
+ .stat-card .number { font-size: 2rem; font-weight: 800; color: var(--primary); }
+ .stat-card .label { font-size: 0.85rem; color: var(--text-gray); }
+ .cta-box { background: linear-gradient(135deg, var(--primary), #2a7d83); color: white; padding: 2rem; border-radius: 16px; text-align: center; margin: 3rem 0; }
+ .cta-btn { display: inline-block; background: white; color: var(--primary); padding: 0.75rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: 600; }
+ 
+ @media (max-width: 640px) { h1 { font-size: 1.8rem; } .stat-grid { grid-template-columns: 1fr; } }
+ </style>
 </head>
 <body>
-    <header class="header">
-        <div class="header-inner">
-            <a href="../../index.html"><img src="../../images/logo.svg" alt="UzunYaşa" class="logo-img"></a>
-            <a href="../tedavi.html" class="back-link">← Tedavi Seçenekleri</a>
-        </div>
-    </header>
+ <header class="header">
+ <div class="header-inner">
+ <a href="../../index.html"><img src="../../images/logo.svg" alt="UzunYaşa" class="logo-img"></a>
+ <a href="../tedavi.html" class="back-link">← Tedavi Seçenekleri</a>
+ </div>
+ </header>
 
-    <article>
-        <div class="breadcrumb">
-            <a href="../../index.html">Ana Sayfa</a> → <a href="../tedavi.html">Tedavi</a> → Gastrik Bypass
-        </div>
-        
-        <div class="hero-image" style="width:100%; height:280px; background:linear-gradient(135deg, rgba(239,68,68,0.7), rgba(220,38,38,0.7)), url('https://images.unsplash.com/photo-1551076805-e1869033e561?w=800&q=80') center/cover; border-radius:16px; margin-bottom:2rem;"></div>
+ <article>
+ <div class="breadcrumb">
+ <a href="../../index.html">Ana Sayfa</a> → <a href="../tedavi.html">Tedavi</a> → Gastrik Bypass
+ </div>
+ 
+ <div class="hero-image" style="width:100%; height:280px; background:linear-gradient(135deg, rgba(239,68,68,0.7), rgba(220,38,38,0.7)), url('https://images.unsplash.com/photo-1551076805-e1869033e561?w=800&q=80') center/cover; border-radius:16px; margin-bottom:2rem;"></div>
 
-        <h1>Gastrik Bypass (Roux-en-Y)</h1>
-        <p class="subtitle">Diyabet remisyonunda altın standart bariatrik cerrahi</p>
+ <h1>Gastrik Bypass (Roux-en-Y)</h1>
+ <p class="subtitle">Diyabet remisyonunda altın standart bariatrik cerrahi</p>
 
-        <div class="stat-grid">
-            <div class="stat-card">
-                <div class="number">%70-80</div>
-                <div class="label">Fazla kilo kaybı</div>
-            </div>
-            <div class="stat-card">
-                <div class="number">%83</div>
-                <div class="label">Diyabet remisyonu</div>
-            </div>
-            <div class="stat-card">
-                <div class="number">60-90 dk</div>
-                <div class="label">Ameliyat süresi</div>
-            </div>
-        </div>
+ <div class="stat-grid">
+ <div class="stat-card">
+ <div class="number">%70-80</div>
+ <div class="label">Fazla kilo kaybı</div>
+ </div>
+ <div class="stat-card">
+ <div class="number">%83</div>
+ <div class="label">Diyabet remisyonu</div>
+ </div>
+ <div class="stat-card">
+ <div class="number">60-90 dk</div>
+ <div class="label">Ameliyat süresi</div>
+ </div>
+ </div>
 
-        <div class="content">
-            <h2>Gastrik Bypass Nedir?</h2>
-            <p>Roux-en-Y gastrik bypass, midenin üst kısmından küçük bir cep (pouch) oluşturulması ve ince bağırsağın yeniden düzenlenerek besinlerin midenin büyük kısmını ve ince bağırsağın ilk bölümünü (duodenum) atlamasını sağlayan bir ameliyattır.</p>
+ <div class="content">
+ <h2>Gastrik Bypass Nedir?</h2>
+ <p>Roux-en-Y gastrik bypass, midenin üst kısmından küçük bir cep (pouch) oluşturulması ve ince bağırsağın yeniden düzenlenerek besinlerin midenin büyük kısmını ve ince bağırsağın ilk bölümünü (duodenum) atlamasını sağlayan bir ameliyattır.</p>
 
-            <h2>Nasıl Çalışır?</h2>
-            <ul>
-                <li><strong>Kısıtlayıcı etki:</strong> Mide cebi sadece 30-50 ml hacmindedir</li>
-                <li><strong>Malabsorptif etki:</strong> Besinler bağırsağın bir kısmını atlar, emilim azalır</li>
-                <li><strong>Hormonal etki:</strong> GLP-1 ve PYY artışı, ghrelin azalması</li>
-                <li><strong>Dumping etkisi:</strong> Tatlı/yağlı yiyeceklere karşı caydırıcı</li>
-            </ul>
+ <h2>Nasıl Çalışır?</h2>
+ <ul>
+ <li><strong>Kısıtlayıcı etki:</strong> Mide cebi sadece 30-50 ml hacmindedir</li>
+ <li><strong>Malabsorptif etki:</strong> Besinler bağırsağın bir kısmını atlar, emilim azalır</li>
+ <li><strong>Hormonal etki:</strong> GLP-1 ve PYY artışı, ghrelin azalması</li>
+ <li><strong>Dumping etkisi:</strong> Tatlı/yağlı yiyeceklere karşı caydırıcı</li>
+ </ul>
 
-            <div class="success-box">
-                <strong>💡 Diyabet İçin En Etkili</strong>
-                <p>Gastrik bypass, Tip 2 diyabet remisyonunda en yüksek başarı oranına sahip bariatrik prosedürdür. Hastaların %83'ünde diyabet tamamen kontrol altına alınabilmektedir.</p>
-            </div>
+ <div class="success-box">
+ <strong> Diyabet İçin En Etkili</strong>
+ <p>Gastrik bypass, Tip 2 diyabet remisyonunda en yüksek başarı oranına sahip bariatrik prosedürdür. Hastaların %83'ünde diyabet tamamen kontrol altına alınabilmektedir.</p>
+ </div>
 
-            <h2>Kimler İçin Uygun?</h2>
-            <ul>
-                <li>BMI ≥ 40 kg/m² veya BMI ≥ 35 + komorbidite</li>
-                <li>Tip 2 diyabeti olan obez hastalar (özellikle önerilen)</li>
-                <li>Ciddi gastroözofageal reflü (GERD) hastaları</li>
-                <li>Tatlı bağımlılığı olan hastalar (dumping etkisi avantajı)</li>
-            </ul>
+ <h2>Kimler İçin Uygun?</h2>
+ <ul>
+ <li>BMI ≥ 40 kg/m² veya BMI ≥ 35 + komorbidite</li>
+ <li>Tip 2 diyabeti olan obez hastalar (özellikle önerilen)</li>
+ <li>Ciddi gastroözofageal reflü (GERD) hastaları</li>
+ <li>Tatlı bağımlılığı olan hastalar (dumping etkisi avantajı)</li>
+ </ul>
 
-            <h2>Sleeve vs Bypass Karşılaştırması</h2>
-            <div class="info-box">
-                <ul>
-                    <li><strong>Diyabet:</strong> Bypass daha etkili</li>
-                    <li><strong>Reflü:</strong> Bypass reflüyü iyileştirir, sleeve kötüleştirebilir</li>
-                    <li><strong>Vitamin eksikliği:</strong> Bypass'ta daha yaygın, ömür boyu takviye gerekli</li>
-                    <li><strong>Teknik zorluk:</strong> Bypass daha karmaşık</li>
-                    <li><strong>Geri dönüşüm:</strong> Her ikisi de geri dönüşümsüz</li>
-                </ul>
-            </div>
+ <h2>Sleeve vs Bypass Karşılaştırması</h2>
+ <div class="info-box">
+ <ul>
+ <li><strong>Diyabet:</strong> Bypass daha etkili</li>
+ <li><strong>Reflü:</strong> Bypass reflüyü iyileştirir, sleeve kötüleştirebilir</li>
+ <li><strong>Vitamin eksikliği:</strong> Bypass'ta daha yaygın, ömür boyu takviye gerekli</li>
+ <li><strong>Teknik zorluk:</strong> Bypass daha karmaşık</li>
+ <li><strong>Geri dönüşüm:</strong> Her ikisi de geri dönüşümsüz</li>
+ </ul>
+ </div>
 
-            <h2>Riskler ve Komplikasyonlar</h2>
-            <div class="warning-box">
-                <ul>
-                    <li>Anastomoz sızıntısı (%1-2)</li>
-                    <li>Internal hernia (bağırsak fıtığı)</li>
-                    <li>Dumping sendromu (%30-50, genellikle geçici)</li>
-                    <li>Marginal ülser</li>
-                    <li>Vitamin B12, demir, kalsiyum eksikliği</li>
-                    <li>Hipoglisemi (reaktif)</li>
-                </ul>
-            </div>
+ <h2>Riskler ve Komplikasyonlar</h2>
+ <div class="warning-box">
+ <ul>
+ <li>Anastomoz sızıntısı (%1-2)</li>
+ <li>Internal hernia (bağırsak fıtığı)</li>
+ <li>Dumping sendromu (%30-50, genellikle geçici)</li>
+ <li>Marginal ülser</li>
+ <li>Vitamin B12, demir, kalsiyum eksikliği</li>
+ <li>Hipoglisemi (reaktif)</li>
+ </ul>
+ </div>
 
-            <h2>Ömür Boyu Gereklilikler</h2>
-            <ul>
-                <li>Günlük multivitamin + mineral takviyesi</li>
-                <li>B12 enjeksiyonu veya yüksek doz oral</li>
-                <li>Kalsiyum + D vitamini</li>
-                <li>Demir takviyesi (özellikle kadınlarda)</li>
-                <li>Düzenli kan tahlili takibi</li>
-                <li>Protein öncelikli beslenme</li>
-            </ul>
+ <h2>Ömür Boyu Gereklilikler</h2>
+ <ul>
+ <li>Günlük multivitamin + mineral takviyesi</li>
+ <li>B12 enjeksiyonu veya yüksek doz oral</li>
+ <li>Kalsiyum + D vitamini</li>
+ <li>Demir takviyesi (özellikle kadınlarda)</li>
+ <li>Düzenli kan tahlili takibi</li>
+ <li>Protein öncelikli beslenme</li>
+ </ul>
 
-            <div class="cta-box">
-                <h3>Size uygun tedavi seçeneğini öğrenin</h3>
-                <p>Kişiselleştirilmiş değerlendirme için testimizi tamamlayın</p>
-                <a href="../test.html" class="cta-btn">Teste Başla →</a>
-            </div>
-        </div>
-    </article>
+ <div class="cta-box">
+ <h3>Size uygun tedavi seçeneğini öğrenin</h3>
+ <p>Kişiselleştirilmiş değerlendirme için testimizi tamamlayın</p>
+ <a href="../test.html" class="cta-btn">Teste Başla →</a>
+ </div>
+ </div>
+ </article>
 
-    <footer><p>© 2026 UzunYaşa. <a href="https://tyzd.org" target="_blank" style="color:inherit;text-decoration:underline;">Tıpta Yapay Zeka Derneği</a> girişimidir.</p></footer>
-    <script src="../../scripts/content-page.js" defer></script>
+ <footer><p>© 2026 UzunYaşa. <a href="https://tyzd.org" target="_blank" style="color:inherit;text-decoration:underline;">Tıpta Yapay Zeka Derneği</a> girişimidir.</p></footer>
+ <script src="../../scripts/content-page.js" defer></script>
 </body>
 </html>
