--- a/pages/tesekkurler.html
+++ b/pages/tesekkurler.html
@@ -4,45 +4,45 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QBM7E0EHFP"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-QBM7E0EHFP');
+ window.dataLayer = window.dataLayer || [];
+ function gtag(){dataLayer.push(arguments);}
+ gtag('js', new Date());
+ gtag('config', 'G-QBM7E0EHFP');
 </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teşekkürler | UzunYaşa</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/main.css">
-    <style>
-        .main { flex: 1; display: flex; align-items: center; justify-content: center; padding: 2rem; }
-        .card { background: white; padding: 3rem; border-radius: 20px; text-align: center; max-width: 500px; box-shadow: 0 10px 40px rgba(0,0,0,0.08); }
-        .icon { font-size: 4rem; margin-bottom: 1.5rem; }
-        h1 { font-size: 2rem; color: var(--primary); margin-bottom: 1rem; }
-        p { color: #6b7280; line-height: 1.7; margin-bottom: 1.5rem; }
-        .btn { display: inline-block; background: var(--primary); color: white; padding: 1rem 2rem; border-radius: 10px; text-decoration: none; font-weight: 600; }
-        .btn:hover { background: #0f3d42; }
-    </style>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Teşekkürler | UzunYaşa</title>
+ <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="../styles/main.css">
+ <style>
+ .main { flex: 1; display: flex; align-items: center; justify-content: center; padding: 2rem; }
+ .card { background: white; padding: 3rem; border-radius: 20px; text-align: center; max-width: 500px; box-shadow: 0 10px 40px rgba(0,0,0,0.08); }
+ .icon { font-size: 4rem; margin-bottom: 1.5rem; }
+ h1 { font-size: 2rem; color: var(--primary); margin-bottom: 1rem; }
+ p { color: #6b7280; line-height: 1.7; margin-bottom: 1.5rem; }
+ .btn { display: inline-block; background: var(--primary); color: white; padding: 1rem 2rem; border-radius: 10px; text-decoration: none; font-weight: 600; }
+ .btn:hover { background: #0f3d42; }
+ </style>
 </head>
 <body>
-    <header class="header">
-        <div class="header-inner">
-            <a href="../index.html"><img src="../images/logo.svg" alt="UzunYaşa" class="logo-img"></a>
-        </div>
-    </header>
-    
-    <main class="main">
-        <div class="card">
-            <div class="icon">✅</div>
-            <h1>Teşekkürler!</h1>
-            <p>Mesajınız başarıyla iletildi. En kısa sürede size dönüş yapacağız.</p>
-            <p>Sağlıklı yaşam yolculuğunuzda yanınızdayız.</p>
-            <a href="../index.html" class="btn">Ana Sayfaya Dön</a>
-        </div>
-    </main>
+ <header class="header">
+ <div class="header-inner">
+ <a href="../index.html"><img src="../images/logo.svg" alt="UzunYaşa" class="logo-img"></a>
+ </div>
+ </header>
+ 
+ <main class="main">
+ <div class="card">
+ <div class="icon"></div>
+ <h1>Teşekkürler!</h1>
+ <p>Mesajınız başarıyla iletildi. En kısa sürede size dönüş yapacağız.</p>
+ <p>Sağlıklı yaşam yolculuğunuzda yanınızdayız.</p>
+ <a href="../index.html" class="btn">Ana Sayfaya Dön</a>
+ </div>
+ </main>
 
-    <footer>
-        <p>© 2026 UzunYaşa. <a href="https://tyzd.org" target="_blank" style="color:inherit;text-decoration:underline;">Tıpta Yapay Zeka Derneği</a> girişimidir.</p>
-    </footer>
+ <footer>
+ <p>© 2026 UzunYaşa. <a href="https://tyzd.org" target="_blank" style="color:inherit;text-decoration:underline;">Tıpta Yapay Zeka Derneği</a> girişimidir.</p>
+ </footer>
 </body>
 </html>
