--- a/pages/tedavi/endoskopik-prosedurler.html
+++ b/pages/tedavi/endoskopik-prosedurler.html
@@ -4,185 +4,185 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QBM7E0EHFP"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-QBM7E0EHFP');
+ window.dataLayer = window.dataLayer || [];
+ function gtag(){dataLayer.push(arguments);}
+ gtag('js', new Date());
+ gtag('config', 'G-QBM7E0EHFP');
 </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Endoskopik Obezite Prosedürleri (ESG, Balon) | UzunYaşa</title>
-    <meta name="description" content="Endoskopik sleeve gastrektomi (ESG), mide balonu ve diğer kesi gerektirmeyen obezite tedavileri hakkında bilgi.">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../styles/main.css">
-    <link rel="stylesheet" href="../../styles/content-page.css">
-    <style>
-        article { max-width: 800px; margin: 0 auto; padding: 7rem 2rem 4rem; }
-        .breadcrumb { font-size: 0.9rem; color: var(--text-gray); margin-bottom: 1.5rem; }
-        .breadcrumb a { color: var(--primary); text-decoration: none; }
-        h1 { font-size: 2.5rem; font-weight: 800; line-height: 1.2; margin-bottom: 1rem; color: var(--text); }
-        .subtitle { font-size: 1.2rem; color: var(--text-gray); margin-bottom: 2rem; }
-        .content p { margin-bottom: 1.5rem; font-size: 1.05rem; }
-        .content h2 { font-size: 1.5rem; font-weight: 700; margin: 2.5rem 0 1rem; color: var(--primary); }
-        .content h3 { font-size: 1.2rem; font-weight: 600; margin: 2rem 0 0.75rem; color: var(--text); }
-        .content ul { margin: 1.5rem 0; padding-left: 1.5rem; }
-        .content li { margin-bottom: 0.5rem; }
-        .procedure-card { background: white; border: 1px solid #e5e7eb; border-radius: 16px; padding: 2rem; margin: 2rem 0; }
-        .procedure-card h3 { margin-top: 0; color: var(--primary); }
-        .procedure-stats { display: flex; gap: 2rem; margin: 1rem 0; flex-wrap: wrap; }
-        .procedure-stat { text-align: center; }
-        .procedure-stat .value { font-size: 1.5rem; font-weight: 700; color: var(--primary); }
-        .procedure-stat .label { font-size: 0.8rem; color: var(--text-gray); }
-        .success-box { background: #f0fdf4; border-left: 4px solid #10b981; padding: 1.5rem; border-radius: 0 12px 12px 0; margin: 2rem 0; }
-        .info-box { background: #eff6ff; border-left: 4px solid #3b82f6; padding: 1.5rem; border-radius: 0 12px 12px 0; margin: 2rem 0; }
-        .comparison-table { width: 100%; border-collapse: collapse; margin: 2rem 0; font-size: 0.95rem; }
-        .comparison-table th, .comparison-table td { padding: 1rem; text-align: left; border-bottom: 1px solid #e5e7eb; }
-        .comparison-table th { background: #f8fafc; font-weight: 600; }
-        .cta-box { background: linear-gradient(135deg, var(--primary), #2a7d83); color: white; padding: 2rem; border-radius: 16px; text-align: center; margin: 3rem 0; }
-        .cta-btn { display: inline-block; background: white; color: var(--primary); padding: 0.75rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: 600; }
-        
-        @media (max-width: 640px) { h1 { font-size: 1.8rem; } }
-    </style>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Endoskopik Obezite Prosedürleri (ESG, Balon) | UzunYaşa</title>
+ <meta name="description" content="Endoskopik sleeve gastrektomi (ESG), mide balonu ve diğer kesi gerektirmeyen obezite tedavileri hakkında bilgi.">
+ <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="../../styles/main.css">
+ <link rel="stylesheet" href="../../styles/content-page.css">
+ <style>
+ article { max-width: 800px; margin: 0 auto; padding: 7rem 2rem 4rem; }
+ .breadcrumb { font-size: 0.9rem; color: var(--text-gray); margin-bottom: 1.5rem; }
+ .breadcrumb a { color: var(--primary); text-decoration: none; }
+ h1 { font-size: 2.5rem; font-weight: 800; line-height: 1.2; margin-bottom: 1rem; color: var(--text); }
+ .subtitle { font-size: 1.2rem; color: var(--text-gray); margin-bottom: 2rem; }
+ .content p { margin-bottom: 1.5rem; font-size: 1.05rem; }
+ .content h2 { font-size: 1.5rem; font-weight: 700; margin: 2.5rem 0 1rem; color: var(--primary); }
+ .content h3 { font-size: 1.2rem; font-weight: 600; margin: 2rem 0 0.75rem; color: var(--text); }
+ .content ul { margin: 1.5rem 0; padding-left: 1.5rem; }
+ .content li { margin-bottom: 0.5rem; }
+ .procedure-card { background: white; border: 1px solid #e5e7eb; border-radius: 16px; padding: 2rem; margin: 2rem 0; }
+ .procedure-card h3 { margin-top: 0; color: var(--primary); }
+ .procedure-stats { display: flex; gap: 2rem; margin: 1rem 0; flex-wrap: wrap; }
+ .procedure-stat { text-align: center; }
+ .procedure-stat .value { font-size: 1.5rem; font-weight: 700; color: var(--primary); }
+ .procedure-stat .label { font-size: 0.8rem; color: var(--text-gray); }
+ .success-box { background: #f0fdf4; border-left: 4px solid #10b981; padding: 1.5rem; border-radius: 0 12px 12px 0; margin: 2rem 0; }
+ .info-box { background: #eff6ff; border-left: 4px solid #3b82f6; padding: 1.5rem; border-radius: 0 12px 12px 0; margin: 2rem 0; }
+ .comparison-table { width: 100%; border-collapse: collapse; margin: 2rem 0; font-size: 0.95rem; }
+ .comparison-table th, .comparison-table td { padding: 1rem; text-align: left; border-bottom: 1px solid #e5e7eb; }
+ .comparison-table th { background: #f8fafc; font-weight: 600; }
+ .cta-box { background: linear-gradient(135deg, var(--primary), #2a7d83); color: white; padding: 2rem; border-radius: 16px; text-align: center; margin: 3rem 0; }
+ .cta-btn { display: inline-block; background: white; color: var(--primary); padding: 0.75rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: 600; }
+ 
+ @media (max-width: 640px) { h1 { font-size: 1.8rem; } }
+ </style>
 </head>
 <body>
-    <header class="header">
-        <div class="header-inner">
-            <a href="../../index.html"><img src="../../images/logo.svg" alt="UzunYaşa" class="logo-img"></a>
-            <a href="../tedavi.html" class="back-link">← Tedavi Seçenekleri</a>
-        </div>
-    </header>
+ <header class="header">
+ <div class="header-inner">
+ <a href="../../index.html"><img src="../../images/logo.svg" alt="UzunYaşa" class="logo-img"></a>
+ <a href="../tedavi.html" class="back-link">← Tedavi Seçenekleri</a>
+ </div>
+ </header>
 
-    <article>
-        <div class="breadcrumb">
-            <a href="../../index.html">Ana Sayfa</a> → <a href="../tedavi.html">Tedavi</a> → Endoskopik Prosedürler
-        </div>
-        
-        <div class="hero-image" style="width:100%; height:280px; background:linear-gradient(135deg, rgba(16,185,129,0.7), rgba(5,150,105,0.7)), url('https://images.unsplash.com/photo-1579684385127-1ef15d508118?w=800&q=80') center/cover; border-radius:16px; margin-bottom:2rem;"></div>
+ <article>
+ <div class="breadcrumb">
+ <a href="../../index.html">Ana Sayfa</a> → <a href="../tedavi.html">Tedavi</a> → Endoskopik Prosedürler
+ </div>
+ 
+ <div class="hero-image" style="width:100%; height:280px; background:linear-gradient(135deg, rgba(16,185,129,0.7), rgba(5,150,105,0.7)), url('https://images.unsplash.com/photo-1579684385127-1ef15d508118?w=800&q=80') center/cover; border-radius:16px; margin-bottom:2rem;"></div>
 
-        <h1>Endoskopik Obezite Prosedürleri</h1>
-        <p class="subtitle">Kesi gerektirmeyen, minimal invaziv kilo verme prosedürleri</p>
+ <h1>Endoskopik Obezite Prosedürleri</h1>
+ <p class="subtitle">Kesi gerektirmeyen, minimal invaziv kilo verme prosedürleri</p>
 
-        <div class="success-box">
-            <strong>✨ Cerrahi Olmadan Çözüm</strong>
-            <p>Endoskopik prosedürler, cerrahi için uygun olmayan veya cerrahiyi tercih etmeyen hastalar için etkili alternatifler sunar. Aynı gün taburculuk ve hızlı iyileşme avantajları vardır.</p>
-        </div>
+ <div class="success-box">
+ <strong> Cerrahi Olmadan Çözüm</strong>
+ <p>Endoskopik prosedürler, cerrahi için uygun olmayan veya cerrahiyi tercih etmeyen hastalar için etkili alternatifler sunar. Aynı gün taburculuk ve hızlı iyileşme avantajları vardır.</p>
+ </div>
 
-        <div class="content">
-            <div class="procedure-card">
-                <h3>🔬 Endoskopik Sleeve Gastrektomi (ESG)</h3>
-                <p>Ağızdan girilerek, endoskopik dikişlerle mide hacminin %70-80 küçültülmesi işlemidir. Cerrahi sleeve'e benzer etki, kesi olmadan.</p>
-                <div class="procedure-stats">
-                    <div class="procedure-stat">
-                        <div class="value">%15-20</div>
-                        <div class="label">Toplam kilo kaybı</div>
-                    </div>
-                    <div class="procedure-stat">
-                        <div class="value">60-90 dk</div>
-                        <div class="label">İşlem süresi</div>
-                    </div>
-                    <div class="procedure-stat">
-                        <div class="value">Aynı gün</div>
-                        <div class="label">Taburculuk</div>
-                    </div>
-                </div>
-                <p><strong>Avantajları:</strong> Kesi yok, geri dönüşümlü, hızlı iyileşme, düşük komplikasyon</p>
-                <p><strong>Dezavantajları:</strong> Cerrahiye göre daha az kilo kaybı, uzun vadeli veriler sınırlı</p>
-            </div>
+ <div class="content">
+ <div class="procedure-card">
+ <h3> Endoskopik Sleeve Gastrektomi (ESG)</h3>
+ <p>Ağızdan girilerek, endoskopik dikişlerle mide hacminin %70-80 küçültülmesi işlemidir. Cerrahi sleeve'e benzer etki, kesi olmadan.</p>
+ <div class="procedure-stats">
+ <div class="procedure-stat">
+ <div class="value">%15-20</div>
+ <div class="label">Toplam kilo kaybı</div>
+ </div>
+ <div class="procedure-stat">
+ <div class="value">60-90 dk</div>
+ <div class="label">İşlem süresi</div>
+ </div>
+ <div class="procedure-stat">
+ <div class="value">Aynı gün</div>
+ <div class="label">Taburculuk</div>
+ </div>
+ </div>
+ <p><strong>Avantajları:</strong> Kesi yok, geri dönüşümlü, hızlı iyileşme, düşük komplikasyon</p>
+ <p><strong>Dezavantajları:</strong> Cerrahiye göre daha az kilo kaybı, uzun vadeli veriler sınırlı</p>
+ </div>
 
-            <div class="procedure-card">
-                <h3>🎈 İntragastrik Balon</h3>
-                <p>Endoskopik olarak mideye yerleştirilen ve 6-12 ay sonra çıkarılan silikon balon. Mide hacmini doldurarak erken tokluk sağlar.</p>
-                <div class="procedure-stats">
-                    <div class="procedure-stat">
-                        <div class="value">%10-15</div>
-                        <div class="label">Toplam kilo kaybı</div>
-                    </div>
-                    <div class="procedure-stat">
-                        <div class="value">20-30 dk</div>
-                        <div class="label">İşlem süresi</div>
-                    </div>
-                    <div class="procedure-stat">
-                        <div class="value">6-12 ay</div>
-                        <div class="label">Balon süresi</div>
-                    </div>
-                </div>
-                <p><strong>Avantajları:</strong> En az invaziv, geçici, köprü tedavi olarak kullanılabilir</p>
-                <p><strong>Dezavantajları:</strong> Geçici etki, çıkarılınca geri alım riski, bulantı/kusma ilk haftalarda</p>
-            </div>
+ <div class="procedure-card">
+ <h3> İntragastrik Balon</h3>
+ <p>Endoskopik olarak mideye yerleştirilen ve 6-12 ay sonra çıkarılan silikon balon. Mide hacmini doldurarak erken tokluk sağlar.</p>
+ <div class="procedure-stats">
+ <div class="procedure-stat">
+ <div class="value">%10-15</div>
+ <div class="label">Toplam kilo kaybı</div>
+ </div>
+ <div class="procedure-stat">
+ <div class="value">20-30 dk</div>
+ <div class="label">İşlem süresi</div>
+ </div>
+ <div class="procedure-stat">
+ <div class="value">6-12 ay</div>
+ <div class="label">Balon süresi</div>
+ </div>
+ </div>
+ <p><strong>Avantajları:</strong> En az invaziv, geçici, köprü tedavi olarak kullanılabilir</p>
+ <p><strong>Dezavantajları:</strong> Geçici etki, çıkarılınca geri alım riski, bulantı/kusma ilk haftalarda</p>
+ </div>
 
-            <div class="procedure-card">
-                <h3>🧵 POSE (Primary Obesity Surgery Endoluminal)</h3>
-                <p>Mide fundusuna endoskopik plikasyonlar (kıvrımlar) oluşturarak hacim azaltma.</p>
-                <div class="procedure-stats">
-                    <div class="procedure-stat">
-                        <div class="value">%12-18</div>
-                        <div class="label">Toplam kilo kaybı</div>
-                    </div>
-                    <div class="procedure-stat">
-                        <div class="value">45-60 dk</div>
-                        <div class="label">İşlem süresi</div>
-                    </div>
-                </div>
-            </div>
+ <div class="procedure-card">
+ <h3> POSE (Primary Obesity Surgery Endoluminal)</h3>
+ <p>Mide fundusuna endoskopik plikasyonlar (kıvrımlar) oluşturarak hacim azaltma.</p>
+ <div class="procedure-stats">
+ <div class="procedure-stat">
+ <div class="value">%12-18</div>
+ <div class="label">Toplam kilo kaybı</div>
+ </div>
+ <div class="procedure-stat">
+ <div class="value">45-60 dk</div>
+ <div class="label">İşlem süresi</div>
+ </div>
+ </div>
+ </div>
 
-            <h2>Karşılaştırma Tablosu</h2>
-            <table class="comparison-table">
-                <thead>
-                    <tr>
-                        <th>Prosedür</th>
-                        <th>Kilo Kaybı</th>
-                        <th>Kalıcılık</th>
-                        <th>İyileşme</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>ESG</td>
-                        <td>%15-20</td>
-                        <td>Kalıcı (geri dönüşümlü)</td>
-                        <td>3-5 gün</td>
-                    </tr>
-                    <tr>
-                        <td>Mide Balonu</td>
-                        <td>%10-15</td>
-                        <td>Geçici (6-12 ay)</td>
-                        <td>1-3 gün</td>
-                    </tr>
-                    <tr>
-                        <td>POSE</td>
-                        <td>%12-18</td>
-                        <td>Kalıcı</td>
-                        <td>2-4 gün</td>
-                    </tr>
-                    <tr>
-                        <td>Cerrahi Sleeve</td>
-                        <td>%25-30</td>
-                        <td>Kalıcı (geri dönüşümsüz)</td>
-                        <td>2-4 hafta</td>
-                    </tr>
-                </tbody>
-            </table>
+ <h2>Karşılaştırma Tablosu</h2>
+ <table class="comparison-table">
+ <thead>
+ <tr>
+ <th>Prosedür</th>
+ <th>Kilo Kaybı</th>
+ <th>Kalıcılık</th>
+ <th>İyileşme</th>
+ </tr>
+ </thead>
+ <tbody>
+ <tr>
+ <td>ESG</td>
+ <td>%15-20</td>
+ <td>Kalıcı (geri dönüşümlü)</td>
+ <td>3-5 gün</td>
+ </tr>
+ <tr>
+ <td>Mide Balonu</td>
+ <td>%10-15</td>
+ <td>Geçici (6-12 ay)</td>
+ <td>1-3 gün</td>
+ </tr>
+ <tr>
+ <td>POSE</td>
+ <td>%12-18</td>
+ <td>Kalıcı</td>
+ <td>2-4 gün</td>
+ </tr>
+ <tr>
+ <td>Cerrahi Sleeve</td>
+ <td>%25-30</td>
+ <td>Kalıcı (geri dönüşümsüz)</td>
+ <td>2-4 hafta</td>
+ </tr>
+ </tbody>
+ </table>
 
-            <h2>Kimler İçin Uygun?</h2>
-            <div class="info-box">
-                <ul>
-                    <li>BMI 30-40 arası (sınıf 1-2 obezite)</li>
-                    <li>Cerrahi için uygun olmayan veya istemeyen hastalar</li>
-                    <li>Cerrahi öncesi kilo kaybı hedefleyenler (köprü tedavi)</li>
-                    <li>Daha önce başarısız diyet denemeleri olanlar</li>
-                    <li>Daha düşük riskli prosedür tercih edenler</li>
-                </ul>
-            </div>
+ <h2>Kimler İçin Uygun?</h2>
+ <div class="info-box">
+ <ul>
+ <li>BMI 30-40 arası (sınıf 1-2 obezite)</li>
+ <li>Cerrahi için uygun olmayan veya istemeyen hastalar</li>
+ <li>Cerrahi öncesi kilo kaybı hedefleyenler (köprü tedavi)</li>
+ <li>Daha önce başarısız diyet denemeleri olanlar</li>
+ <li>Daha düşük riskli prosedür tercih edenler</li>
+ </ul>
+ </div>
 
-            <div class="cta-box">
-                <h3>Size uygun prosedürü öğrenin</h3>
-                <p>Kişiselleştirilmiş değerlendirme için testimizi tamamlayın</p>
-                <a href="../test.html" class="cta-btn">Teste Başla →</a>
-            </div>
-        </div>
-    </article>
+ <div class="cta-box">
+ <h3>Size uygun prosedürü öğrenin</h3>
+ <p>Kişiselleştirilmiş değerlendirme için testimizi tamamlayın</p>
+ <a href="../test.html" class="cta-btn">Teste Başla →</a>
+ </div>
+ </div>
+ </article>
 
-    <footer><p>© 2026 UzunYaşa. <a href="https://tyzd.org" target="_blank" style="color:inherit;text-decoration:underline;">Tıpta Yapay Zeka Derneği</a> girişimidir.</p></footer>
-    <script src="../../scripts/content-page.js" defer></script>
+ <footer><p>© 2026 UzunYaşa. <a href="https://tyzd.org" target="_blank" style="color:inherit;text-decoration:underline;">Tıpta Yapay Zeka Derneği</a> girişimidir.</p></footer>
+ <script src="../../scripts/content-page.js" defer></script>
 </body>
 </html>
